--- a/src/App.css
+++ b/src/App.css
@@ -14,14 +14,18 @@
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  flex-direction: row;
+  align-items: flex-start;
   font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: center;
+}
+
+@media (max-width: 760px) {
+  .App-header{
+    flex-wrap: wrap;
+  }
 }
 
 .App-link {
@@ -35,4 +39,13 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+::-webkit-scrollbar {
+  height: 5px;
+  width: 8px;
+  }
+  ::-webkit-scrollbar-thumb {
+  background: #cabeba;
+  border-radius: 10px;
 }
